--- a/tables.html
+++ b/tables.html
@@ -11,15 +11,12 @@
     <div class="layout">
         <!-- Side Menu -->
         <div class="side-menu">
-            <h1>Weather App</h1>
-            <ul>
-                <li><a href="/index.html">Dashboard</a></li>
-                <li><a href="/tables.html">Tables</a></li>
-            </ul>
+            <h1>WeatherApp</h1>
+                <a href="/index.html">Dashboard</a>
+                <a href="/tables.html">Tables</a>
         </div>
         <div class="main-content">
             <div class="header">
-                <h1>Weather Dashboard</h1>
                 <div class="search-bar">
                     <input type="text" id="city-input" placeholder="Enter city name..." />
                     <button id="search-button">Search</button>
